# bms-analysis

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml  serial_hexdump_logger.c
docs/: 00-glossary.md  01-protocol.md  02-holding-registers.md  03-input-registers.md  04-bms-firmware.md  05-inverter-firmware.md  06-wire-captures.md  07-emulator-implications.md  08-bridge-implementation.md  09-pace-comparison.md
tests/: test_decode_fields.py  test_extract_fields.py  test_pace_reference.py  test_tcp_poller.py
tools/: analysis_template.ipynb  build_notebook.py  decode_fields.py  extract_fields.py  join_streams.py  modbus_proxy.c  modbus_register_logger.c  pace_reference.py  parse_log.py  tcp_poller.py
