[project]
name = "giv-bms-analysis-tools"
version = "0.1.0"
description = "Capture and analysis tools for the GivEnergy LV BMS protocol"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "nbformat>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]
poll = ["givenergy-modbus-async"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["tools*"]
